--- a/ken_pom_juice.ipynb
+++ b/ken_pom_juice.ipynb
@@ -2,168 +2,246 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "from scraper import scrape_ken_pom\n",
-    "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
-    "import requests\n",
-    "from selenium import webdriver\n",
-    "from webdriver_manager.chrome import ChromeDriverManager\n",
     "import time\n",
-    "import statistics\n",
-    "\n",
-    "from projector import project_score_advanced\n",
-    "from team import Team\n",
-    "from game import Game\n",
-    "\n",
-    "\n",
-    "kenpom_df = scrape_ken_pom()\n"
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "99.58403361344538\n",
-      "99.33831775700935\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    " kenpom_df.head()\n",
+    "def scrape_ken_pom():\n",
     "    \n",
-    "all_teams_avg = kenpom_df[\"AdjO\"].mean()\n",
+    "    url=\"https://kenpom.com/index.php\"\n",
+    "    resp = requests.get(url)\n",
+    "    soup = BeautifulSoup(resp.content, 'html.parser')\n",
     "\n",
-    "active = kenpom_df[kenpom_df[\"W-L\"] != \"0-0\"]\n",
-    "active_avg = active[\"AdjO\"].mean()\n",
+    "    #find the table and header tags\n",
+    "    table = soup.find_all('table', {'id':'ratings-table'})[0]\n",
+    "    headers = table.find('thead').find('tr', {'class':'thead2'})\n",
+    "    #store the header tags titles into a list\n",
+    "    cols = [th.text for th in headers.find_all('th')]\n",
     "\n",
-    "print(all_teams_avg)\n",
-    "print(active_avg)"
+    "    #initialize the dataframe\n",
+    "    \n",
+    "    kenpom_df = pd.DataFrame(columns=cols)\n",
+    "\n",
+    "    #get the data elements from the table\n",
+    "    body = table.find_all('tbody')[0]\n",
+    "    rows = body.find_all('tr')\n",
+    "\n",
+    "    #scrape the data from each row\n",
+    "    for r in rows:\n",
+    "        data = r.find_all('td')\n",
+    "        info = []\n",
+    "\n",
+    "        for d in data:\n",
+    "            try:\n",
+    "                if(d[\"class\"] != ['td-right']):\n",
+    "                    info.append(d.text)\n",
+    "            except:\n",
+    "                info.append(d.text)\n",
+    "\n",
+    "        #if the list isnt empty\n",
+    "        if(info != []):\n",
+    "            #create a series with the list and add it to the dataframe\n",
+    "            info_df = pd.Series(info, index=cols)\n",
+    "            kenpom_df = kenpom_df.append(info_df, ignore_index=True)\n",
+    "\n",
+    "    #clean and convert columns\n",
+    "    kenpom_df[\"AdjO\"] = pd.to_numeric(kenpom_df[\"AdjO\"])\n",
+    "    kenpom_df[\"AdjD\"] = pd.to_numeric(kenpom_df[\"AdjD\"])\n",
+    "    kenpom_df[\"AdjT\"] = pd.to_numeric(kenpom_df[\"AdjT\"])\n",
+    "\n",
+    "    return kenpom_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kenpom_df = scrape_ken_pom()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sportsipy.ncaab.teams import Teams\n",
+    "teams = Teams()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sportsipy_team_names = [t.name for t in teams]\n",
+    "kenpom_names = list(kenpom_df.Team.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches = [name for name in sportsipy_team_names if name in kenpom_names]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - Current google-chrome version is 87.0.4280\n",
-      "[WDM] - Get LATEST driver version for 87.0.4280\n",
-      "[WDM] - Driver [/Users/homefolder/.wdm/drivers/chromedriver/mac64/87.0.4280.88/chromedriver] found in cache\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \n"
+      "Alabama-Birmingham\n",
+      "Alabama State\n",
+      "Albany (NY)\n",
+      "Alcorn State\n",
+      "Appalachian State\n",
+      "Arizona State\n",
+      "Arkansas-Pine Bluff\n",
+      "Arkansas State\n",
+      "Ball State\n",
+      "Boise State\n",
+      "Bowling Green State\n",
+      "Brigham Young\n",
+      "Cal State Bakersfield\n",
+      "Cal State Fullerton\n",
+      "Cal State Northridge\n",
+      "California Baptist\n",
+      "UC-Davis\n",
+      "UC-Irvine\n",
+      "UC-Riverside\n",
+      "UC-San Diego\n",
+      "UC-Santa Barbara\n",
+      "University of California\n",
+      "Central Connecticut State\n",
+      "Central Florida\n",
+      "Chicago State\n",
+      "Citadel\n",
+      "Cleveland State\n",
+      "College of Charleston\n",
+      "Colorado State\n",
+      "Coppin State\n",
+      "Delaware State\n",
+      "Detroit Mercy\n",
+      "Dixie State\n",
+      "East Tennessee State\n",
+      "Florida International\n",
+      "Florida State\n",
+      "Fresno State\n",
+      "Gardner-Webb\n",
+      "Georgia State\n",
+      "Grambling\n",
+      "Idaho State\n",
+      "Illinois-Chicago\n",
+      "Illinois State\n",
+      "Indiana State\n",
+      "Iowa State\n",
+      "Purdue-Fort Wayne\n",
+      "Jackson State\n",
+      "Jacksonville State\n",
+      "Kansas State\n",
+      "Kennesaw State\n",
+      "Kent State\n",
+      "Cal State Long Beach\n",
+      "Long Island University\n",
+      "Louisiana-Monroe\n",
+      "Louisiana State\n",
+      "Loyola (IL)\n",
+      "Loyola (MD)\n",
+      "Maryland-Baltimore County\n",
+      "Maryland-Eastern Shore\n",
+      "Massachusetts-Lowell\n",
+      "McNeese State\n",
+      "Miami (FL)\n",
+      "Miami (OH)\n",
+      "Michigan State\n",
+      "Mississippi State\n",
+      "Mississippi Valley State\n",
+      "Missouri-Kansas City\n",
+      "Missouri State\n",
+      "Montana State\n",
+      "Morehead State\n",
+      "Morgan State\n",
+      "Murray State\n",
+      "Omaha\n",
+      "Nevada-Las Vegas\n",
+      "New Mexico State\n",
+      "Nicholls State\n",
+      "Norfolk State\n",
+      "North Carolina-Asheville\n",
+      "North Carolina-Greensboro\n",
+      "North Carolina State\n",
+      "North Carolina-Wilmington\n",
+      "North Dakota State\n",
+      "Northwestern State\n",
+      "Ohio State\n",
+      "Oklahoma State\n",
+      "Oregon State\n",
+      "Penn State\n",
+      "Pennsylvania\n",
+      "Portland State\n",
+      "Prairie View\n",
+      "Sacramento State\n",
+      "Saint Francis (PA)\n",
+      "Saint Mary's (CA)\n",
+      "Sam Houston State\n",
+      "San Diego State\n",
+      "San Jose State\n",
+      "South Carolina State\n",
+      "South Carolina Upstate\n",
+      "South Dakota State\n",
+      "Southeast Missouri State\n",
+      "Southern California\n",
+      "Southern Methodist\n",
+      "Southern Mississippi\n",
+      "St. Francis (NY)\n",
+      "St. John's (NY)\n",
+      "Tarleton State\n",
+      "Tennessee-Martin\n",
+      "Tennessee State\n",
+      "Texas A&M-Corpus Christi\n",
+      "Texas-Arlington\n",
+      "Texas Christian\n",
+      "Texas-El Paso\n",
+      "Texas-Rio Grande Valley\n",
+      "Texas-San Antonio\n",
+      "Texas State\n",
+      "Utah State\n",
+      "Virginia Commonwealth\n",
+      "Washington State\n",
+      "Weber State\n",
+      "Wichita State\n",
+      "Wright State\n",
+      "Youngstown State\n"
      ]
     }
    ],
    "source": [
-    "# calculate the average tempo from kenpom but first get rid of teams that havent played yet\n",
-    "# drop all rows with W-L == 0-0\n",
-    "#active_kenpom_df = kenpom_df[kenpom_df[\"W-L\"] != \"0-0\"]\n",
-    "tr_possessions_url = \"https://www.teamrankings.com/ncaa-basketball/stat/points-per-game\" #omitting the data parameter will get the page for the current date\n",
-    "\n",
-    "driver = webdriver.Chrome(ChromeDriverManager().install())\n",
-    "driver.get(tr_possessions_url)\n",
-    "time.sleep(5)\n",
-    "soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
-    "driver.close()\n",
-    "\n",
-    "table = soup.find('table', attrs={\"id\":\"DataTables_Table_0\"})\n",
-    "tbody = table.find('tbody')\n",
-    "rows = tbody.find_all('tr')\n",
-    "\n",
-    "ppg_data = [row.find_all('td')[2].text for row in rows]\n",
-    "ppg = [float(ppg) for ppg in ppg_data if ppg != \"--\"]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "71.2524115755627\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(statistics.mean(ppg))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Rk         NaN\n",
-       "Team      Duke\n",
-       "Conf       NaN\n",
-       "W-L        NaN\n",
-       "AdjEM      NaN\n",
-       "AdjO     115.4\n",
-       "AdjD      80.7\n",
-       "AdjT      71.5\n",
-       "Luck       NaN\n",
-       "AdjEM      NaN\n",
-       "OppO       NaN\n",
-       "OppD       NaN\n",
-       "AdjEM      NaN\n",
-       "Name: 0, dtype: object"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#test the project score advanced method\n",
-    "\n",
-    "test_df = pd.DataFrame(columns=kenpom_df.columns)\n",
-    "\n",
-    "duke_dict = {\n",
-    "    \"Team\":\"Duke\",\n",
-    "    \"AdjO\":115.4,\n",
-    "    \"AdjD\":80.7,\n",
-    "    \"AdjT\":71.5\n",
-    "}\n",
-    "\n",
-    "unc_dict = {\n",
-    "    \"Team\":\"UNC\",\n",
-    "    \"AdjO\":119.8,\n",
-    "    \"AdjD\":87.6,\n",
-    "    \"AdjT\":76.3\n",
-    "}\n",
-    "\n",
-    "\n",
-    "test_df = test_df.append(duke_dict, ignore_index=True)\n",
-    "test_df = test_df.append(unc_dict, ignore_index=True)\n",
-    "\n",
-    "test_df.iloc[0]"
+    "for name in sportsipy_team_names:\n",
+    "    if(name not in kenpom_names):\n",
+    "        print(name)"
    ]
   }
  ],
@@ -172,6 +250,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
