added dictionary mappings

--- a/ken_pom_juice.ipynb
+++ b/ken_pom_juice.ipynb
@@ -246,34 +246,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "234"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from scraper import TEAM_NAME_DICT as tnd"
+    "len(matches)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "33\n",
-      "['North Dakota St', 'South Dakota St', 'Long Beach St', 'Appalachian St', 'South Carolina St', 'Iowa St', 'Tennessee St', 'Mississippi St', 'Dixie St', 'East Tennessee St', 'Sacramento St', 'Tarleton St', 'Ball St', 'Jacksonville St', 'Washingston St', 'Sam Houston St', 'Southeast Missouri St', 'Texas St', 'Ohio St', 'Idaho St', 'Northwestern St', 'Washington St', 'Penn St', 'Weber St', 'Coppin St', 'Utah St', 'Boise St', 'Wright St', 'Youngstown St', 'Kent St', 'New Mexico St', 'Mississippi Valley St', 'Alcorn St']\n"
-     ]
-    }
-   ],
-   "source": [
-    "reverse = {v: k.replace(\" St\", \" St.\") for k,v in tnd.items()}\n",
-    "\n",
-    "state_list = [k for k in tnd if \"St\" == k[-2:]]\n",
-    "print(len(state_list))\n",
-    "print(state_list)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
