--- a/ken_pom_juice.ipynb
+++ b/ken_pom_juice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,269 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rk</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Conf</th>\n",
+       "      <th>W-L</th>\n",
+       "      <th>AdjEM</th>\n",
+       "      <th>AdjO</th>\n",
+       "      <th>AdjD</th>\n",
+       "      <th>AdjT</th>\n",
+       "      <th>Luck</th>\n",
+       "      <th>AdjEM</th>\n",
+       "      <th>OppO</th>\n",
+       "      <th>OppD</th>\n",
+       "      <th>AdjEM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Gonzaga</td>\n",
+       "      <td>WCC</td>\n",
+       "      <td>0-0</td>\n",
+       "      <td>+31.52</td>\n",
+       "      <td>120.1</td>\n",
+       "      <td>88.5</td>\n",
+       "      <td>75.9</td>\n",
+       "      <td>+.000</td>\n",
+       "      <td>+0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>+0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Michigan</td>\n",
+       "      <td>B10</td>\n",
+       "      <td>0-0</td>\n",
+       "      <td>+28.30</td>\n",
+       "      <td>114.8</td>\n",
+       "      <td>86.5</td>\n",
+       "      <td>71.5</td>\n",
+       "      <td>+.000</td>\n",
+       "      <td>+0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>+0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Kansas</td>\n",
+       "      <td>B12</td>\n",
+       "      <td>0-0</td>\n",
+       "      <td>+26.30</td>\n",
+       "      <td>114.4</td>\n",
+       "      <td>88.1</td>\n",
+       "      <td>72.5</td>\n",
+       "      <td>+.000</td>\n",
+       "      <td>+0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>+0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>B10</td>\n",
+       "      <td>0-0</td>\n",
+       "      <td>+25.00</td>\n",
+       "      <td>112.2</td>\n",
+       "      <td>87.2</td>\n",
+       "      <td>73.8</td>\n",
+       "      <td>+.000</td>\n",
+       "      <td>+0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>+0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Purdue</td>\n",
+       "      <td>B10</td>\n",
+       "      <td>0-0</td>\n",
+       "      <td>+24.93</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>70.7</td>\n",
+       "      <td>+.000</td>\n",
+       "      <td>+0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>+0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>353</th>\n",
+       "      <td>354</td>\n",
+       "      <td>Bethune Cookman</td>\n",
+       "      <td>SWAC</td>\n",
+       "      <td>0-0</td>\n",
+       "      <td>-25.79</td>\n",
+       "      <td>87.2</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>72.5</td>\n",
+       "      <td>+.000</td>\n",
+       "      <td>+0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>+0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354</th>\n",
+       "      <td>355</td>\n",
+       "      <td>Maryland Eastern Shore</td>\n",
+       "      <td>MEAC</td>\n",
+       "      <td>0-0</td>\n",
+       "      <td>-27.75</td>\n",
+       "      <td>81.3</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>71.9</td>\n",
+       "      <td>+.000</td>\n",
+       "      <td>+0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>+0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>355</th>\n",
+       "      <td>356</td>\n",
+       "      <td>Arkansas Pine Bluff</td>\n",
+       "      <td>SWAC</td>\n",
+       "      <td>0-0</td>\n",
+       "      <td>-29.09</td>\n",
+       "      <td>81.7</td>\n",
+       "      <td>110.8</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>+.000</td>\n",
+       "      <td>+0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>+0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356</th>\n",
+       "      <td>357</td>\n",
+       "      <td>Chicago St.</td>\n",
+       "      <td>WAC</td>\n",
+       "      <td>0-0</td>\n",
+       "      <td>-30.99</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>114.4</td>\n",
+       "      <td>72.2</td>\n",
+       "      <td>+.000</td>\n",
+       "      <td>+0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>+0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>357</th>\n",
+       "      <td>358</td>\n",
+       "      <td>Mississippi Valley St.</td>\n",
+       "      <td>SWAC</td>\n",
+       "      <td>0-0</td>\n",
+       "      <td>-36.21</td>\n",
+       "      <td>80.9</td>\n",
+       "      <td>117.1</td>\n",
+       "      <td>75.6</td>\n",
+       "      <td>+.000</td>\n",
+       "      <td>+0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>+0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>358 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Rk                    Team  Conf  W-L   AdjEM   AdjO   AdjD  AdjT  \\\n",
+       "0      1                 Gonzaga   WCC  0-0  +31.52  120.1   88.5  75.9   \n",
+       "1      2                Michigan   B10  0-0  +28.30  114.8   86.5  71.5   \n",
+       "2      3                  Kansas   B12  0-0  +26.30  114.4   88.1  72.5   \n",
+       "3      4                Illinois   B10  0-0  +25.00  112.2   87.2  73.8   \n",
+       "4      5                  Purdue   B10  0-0  +24.93  115.0   90.0  70.7   \n",
+       "..   ...                     ...   ...  ...     ...    ...    ...   ...   \n",
+       "353  354         Bethune Cookman  SWAC  0-0  -25.79   87.2  113.0  72.5   \n",
+       "354  355  Maryland Eastern Shore  MEAC  0-0  -27.75   81.3  109.0  71.9   \n",
+       "355  356     Arkansas Pine Bluff  SWAC  0-0  -29.09   81.7  110.8  72.0   \n",
+       "356  357             Chicago St.   WAC  0-0  -30.99   83.4  114.4  72.2   \n",
+       "357  358  Mississippi Valley St.  SWAC  0-0  -36.21   80.9  117.1  75.6   \n",
+       "\n",
+       "      Luck  AdjEM OppO OppD  AdjEM  \n",
+       "0    +.000  +0.00  0.0  0.0  +0.00  \n",
+       "1    +.000  +0.00  0.0  0.0  +0.00  \n",
+       "2    +.000  +0.00  0.0  0.0  +0.00  \n",
+       "3    +.000  +0.00  0.0  0.0  +0.00  \n",
+       "4    +.000  +0.00  0.0  0.0  +0.00  \n",
+       "..     ...    ...  ...  ...    ...  \n",
+       "353  +.000  +0.00  0.0  0.0  +0.00  \n",
+       "354  +.000  +0.00  0.0  0.0  +0.00  \n",
+       "355  +.000  +0.00  0.0  0.0  +0.00  \n",
+       "356  +.000  +0.00  0.0  0.0  +0.00  \n",
+       "357  +.000  +0.00  0.0  0.0  +0.00  \n",
+       "\n",
+       "[358 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kenpom_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -208,6 +470,7 @@
       "Baylor > Baylor\n",
       "Bellarmine > Bellarmine\n",
       "Belmont > Belmont\n",
+      "Bethune-Cookman > Bethune Cookman\n",
       "Binghamton > Binghamton\n",
       "Boise State > Boise St.\n",
       "Boston College > Boston College\n",
@@ -481,6 +744,7 @@
       "St. Bonaventure > St. Bonaventure\n",
       "St. Francis (NY) > St. Francis NY\n",
       "St. John's (NY) > St. John's\n",
+      "St. Thomas (MN) > St. Thomas MN\n",
       "Stanford > Stanford\n",
       "Stephen F. Austin > Stephen F. Austin\n",
       "Stetson > Stetson\n",
@@ -552,14 +816,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{}\n"
+      "{'Detroit': '', 'St. Thomas MN': ''}\n"
      ]
     }
    ],
@@ -581,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +853,7 @@
      "output_type": "stream",
      "text": [
       "356\n",
-      "0\n"
+      "2\n"
      ]
     }
    ],
@@ -600,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -620,9 +884,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "e57041012d207fb957c7478b0a35fe0ccc67fd0aac88b96ce45197160c53c023"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.6.4 64-bit ('env_ken_pom': venv)",
    "name": "python3"
   },
   "language_info": {
